--- a/android/app/src/main/res/values-v31/styles.xml
+++ b/android/app/src/main/res/values-v31/styles.xml
@@ -2,12 +2,13 @@
 <resources>
 
     <style name="LaunchTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
-        <item name="android:windowSplashScreenBackground">#000000</item>
+        <item name="android:windowSplashScreenBackground">@android:color/black</item>
+        <item name="android:windowSplashScreenAnimatedIcon">@drawable/launch_background</item>
         <item name="android:windowFullscreen">true</item>
     </style>
 
     <style name="NormalTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
-        <item name="android:windowSplashScreenBackground">#000000</item>
+        <item name="android:windowSplashScreenAnimatedIcon">@drawable/launch_background</item>
 
     </style>
 </resources>
