--- a/android/app/src/main/res/values-night-v31/styles.xml
+++ b/android/app/src/main/res/values-night-v31/styles.xml
@@ -3,7 +3,7 @@
 
     <style name="LaunchTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
         <item name="android:windowSplashScreenBackground">@android:color/black</item>
-        <item name="android:windowFullscreen">true</item>
+<!--        <item name="android:windowFullscreen">true</item>-->
     </style>
 
     <style name="NormalTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
@@ -12,4 +12,3 @@
 
     </style>
 </resources>
-
