--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -4,7 +4,7 @@
         <item name="android:windowBackground">@drawable/launch_background</item>
         <item name="android:navigationBarColor">@android:color/transparent</item>
         <!--        <item name="android:windowFullscreen">true</item>-->
-        <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
+        <item name="android:forceDarkAllowed">false</item>
         <item name="android:windowFullscreen">true</item>
     </style>
     <style name="NormalTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
